Added company name search functionality

--- a/index.html
+++ b/index.html
@@ -25,12 +25,12 @@
 
   <body class="text-center">
 
-    <form class="form-signin" method="post" style="border: 0.2rem solid black;">
+    <form class="form-signin" method="post" style="border: 0.3rem solid black;">
       <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTjEqvT3rrljR1fhzer4qmvieF6YJFgCj_Rrw&usqp=CAU" alt="">
 
       <h1 class="">Coffee Supply Chain</h1>
 
-      <input type="text" name="search" class="form-control top" placeholder="Search Party Name or Country" required autofocus>
+      <input type="text" name="search" class="form-control top" placeholder="Party Type, Company or Country" required autofocus>
       <br>
       <button class="btn btn-lg btn-primary btn-block" type="submit"><i class="fa-solid fa-magnifying-glass"></i> <b>Search</b></button>
       <p class="mt-5 mb-3 text-muted">&copy; <script>document.write(new Date().getFullYear())</script>
